# object-detection

./: .gitignore  README.md  pyproject.toml
src/object_detection/: object_detection.py
tests/: test_image.py
