[project]
name = "object-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Ashwin Senthilvasan",email = "ashwin.senthilvasan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ray[serve] (>=2.44.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "torch (>=1.7)",
    "pillow (>=11.2.1,<12.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "gitpython (>=3.1.30)",
    "realesrgan @ git+https://github.com/sberbank-ai/Real-ESRGAN.git",
]

[tool.poetry]
packages = [{include = "object_detection", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
